--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,3 +3,18 @@ html,body,#app{
     margin: 0;
     padding: 0;
 }
+.el-breadcrumb{
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+
+.el-card{
+    box-shadow: 0 1px 1px reba(0,0,0,0.15);
+}
+.el-table{
+    margin-top: 15px;
+    font-size: 12px;
+}
+.el-pagination{
+    margin-top: 15px;
+}
