--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -22,3 +22,12 @@ html,body,#app{
 .el-cascader-menu{
     height: 300px;
   }
+.el-steps{
+    margin: 15px 0;
+}
+.el-step__title{
+    font-size: 13px;
+}
+.ql-editor{
+    min-height: 300px;
+}
